add update form register with calendar for birthday
